@@ -229,6 +229,9 @@ Trunk - Unreleased
     HIVE-544. Fix predicate push for exprFieldNodeDesc.
     (Prasad Chakka via zshao)
 
+    HIVE-547. Better logging in ExecDriver
+    (Zheng Shao via namit)
+
 Release 0.3.1 - Unreleased
 
   INCOMPATIBLE CHANGES
